// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List /> Should match the bullet list snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    bullet={false}
    divided={false}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bullet": false,
      "children": Array [
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Tomato sauce
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Mustard
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Barbecue sauce
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Red-wine vinegar
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Salsa
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Hot pepper sauce
        </Item>,
      ],
      "divided": false,
      "inline": false,
      "items": Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ],
      "ordered": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Tomato sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Tomato sauce",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Tomato sauce",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Mustard",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Mustard",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Mustard",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Barbecue sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Barbecue sauce",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Barbecue sauce",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Red-wine vinegar",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Red-wine vinegar",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Red-wine vinegar",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Salsa",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Salsa",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Salsa",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Hot pepper sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Hot pepper sauce",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Hot pepper sauce",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bullet": false,
        "children": Array [
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Tomato sauce
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Mustard
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Barbecue sauce
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Red-wine vinegar
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Salsa
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Hot pepper sauce
          </Item>,
        ],
        "divided": false,
        "inline": false,
        "items": Array [
          "Tomato sauce",
          "Mustard",
          "Barbecue sauce",
          "Red-wine vinegar",
          "Salsa",
          "Hot pepper sauce",
        ],
        "ordered": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Tomato sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Tomato sauce",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Tomato sauce",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Mustard",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Mustard",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Mustard",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Barbecue sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Barbecue sauce",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Barbecue sauce",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Red-wine vinegar",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Red-wine vinegar",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Red-wine vinegar",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Salsa",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Salsa",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Salsa",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Hot pepper sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Hot pepper sauce",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Hot pepper sauce",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<List /> Should match the default snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    bullet={false}
    divided={false}
    inline={false}
    items={Array []}
    ordered={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bullet": false,
      "children": Array [],
      "divided": false,
      "inline": false,
      "items": Array [],
      "ordered": false,
    },
    "ref": null,
    "rendered": Array [],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bullet": false,
        "children": Array [],
        "divided": false,
        "inline": false,
        "items": Array [],
        "ordered": false,
      },
      "ref": null,
      "rendered": Array [],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<List /> Should match the divided list snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    bullet={false}
    divided={true}
    inline={false}
    items={
      Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ]
    }
    ordered={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "bullet": false,
      "children": Array [
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Tomato sauce
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Mustard
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Barbecue sauce
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Red-wine vinegar
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Salsa
        </Item>,
        <Item
          bullet=""
          content={null}
          icon=""
        >
          Hot pepper sauce
        </Item>,
      ],
      "divided": true,
      "inline": false,
      "items": Array [
        "Tomato sauce",
        "Mustard",
        "Barbecue sauce",
        "Red-wine vinegar",
        "Salsa",
        "Hot pepper sauce",
      ],
      "ordered": false,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Tomato sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Tomato sauce",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Tomato sauce",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Mustard",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Mustard",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Mustard",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Barbecue sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Barbecue sauce",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Barbecue sauce",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Red-wine vinegar",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Red-wine vinegar",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Red-wine vinegar",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Salsa",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Salsa",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Salsa",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "Hot pepper sauce",
        "nodeType": "class",
        "props": Object {
          "bullet": "",
          "children": "Hot pepper sauce",
          "content": null,
          "icon": "",
        },
        "ref": null,
        "rendered": "Hot pepper sauce",
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "bullet": false,
        "children": Array [
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Tomato sauce
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Mustard
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Barbecue sauce
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Red-wine vinegar
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Salsa
          </Item>,
          <Item
            bullet=""
            content={null}
            icon=""
          >
            Hot pepper sauce
          </Item>,
        ],
        "divided": true,
        "inline": false,
        "items": Array [
          "Tomato sauce",
          "Mustard",
          "Barbecue sauce",
          "Red-wine vinegar",
          "Salsa",
          "Hot pepper sauce",
        ],
        "ordered": false,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Tomato sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Tomato sauce",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Tomato sauce",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Mustard",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Mustard",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Mustard",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Barbecue sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Barbecue sauce",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Barbecue sauce",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Red-wine vinegar",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Red-wine vinegar",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Red-wine vinegar",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Salsa",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Salsa",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Salsa",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "Hot pepper sauce",
          "nodeType": "class",
          "props": Object {
            "bullet": "",
            "children": "Hot pepper sauce",
            "content": null,
            "icon": "",
          },
          "ref": null,
          "rendered": "Hot pepper sauce",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
